--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,13 @@
       content="Greg Weisbrod's Homepage"
     />
     <title>Greg Weisbrod</title>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-7C7YZZLCZ3"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'G-7C7YZZLCZ3');
+    </script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
