--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,10 @@
       content="Greg Weisbrod's Homepage"
     />
     <title>Greg Weisbrod</title>
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+    <link rel="manifest" href="/site.webmanifest" />
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-7C7YZZLCZ3"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
