--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
     </script>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <noscript>You need to enable JavaScript to view this page.</noscript>
     <div id="root"></div>
   </body>
 </html>
