--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,11 @@
     </script>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to view this page.</noscript>
+    <noscript>
+      <div class="alert">
+        You need to enable JavaScript to view this page.
+      </div>
+    </noscript>
     <div id="root"></div>
   </body>
 </html>
