--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,7 @@
   </head>
   <body>
     <noscript>
-      <div class="alert">
+      <div>
         You need to enable JavaScript to view this page.
       </div>
     </noscript>
