styles for noscript

--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,8 @@
   </head>
   <body>
     <noscript>
-      <div>
+      <link rel="stylesheet" href="/no-script.css" />
+      <div id="no-script-root">
         You need to enable JavaScript to view this page.
       </div>
     </noscript>
