--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
       name="description"
       content="Greg Weisbrod's Homepage"
     />
+    <meta content="11f18d49d4c2095c2cab48a1e5bc793e343caed979875c9957f8b728ff4163b9" />
     <title>Greg Weisbrod</title>
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
